第二次提交

--- a/_includes/page/about.html
+++ b/_includes/page/about.html
@@ -1,8 +1,8 @@
 <div class="about">
-<div class="about__devider">*****</div>
+<div class="about__devider">----</div>
 <div class="about__text">
-<strong> Non sunt multiplicanda entia sine necessitate </strong>
-<br>☕ Pudhina theme by Knhash 🛠️
-<br> You can change this text in _includes/page/about.html
+<strong> 有人的的地方才有好和坏 </strong>
+<br>☕ 开发者chef-华联小学 🛠️
+<br> 这是哪里？-> _includes/page/about.html
 </div>
 </div>
