--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,7 +50,8 @@
 
 /* =Header *//*************************************************************/
   .header {
-    overflow: hidden; }
+    overflow: hidden;
+  background-image: url("../img/1.png"); }
 
   .navigation {
     float: left; }
