--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,10 +4,10 @@
     font-family: 'Quicksand', sans-serif;  
     font-size: 100%;
     color: #012;
-    background-color: #FFF; }
+    background-color:#ff494973; }
 
   a {
-    color: #57A;
+    color:#e70909;
     font-weight: bold;
     text-decoration: none; }
 
@@ -60,7 +60,7 @@
   .logo {
     font-size: 300%;
     font-weight: 700;
-    color: #16a085;
+    color:#1bd1d1;
     display: block; }
 
   .menu {
