--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
     font-family: 'Quicksand', sans-serif;  
     font-size: 100%;
     color: #012;
-    background-color:#ff494973; }
+    background-image: url("../img/timg.jpg"); }
 
   a {
     color:#e70909;
