--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,8 +4,7 @@
     font-family: 'Quicksand', sans-serif;  
     font-size: 100%;
     color: #012;
-    background-image: url("../img/timg.jpg");
-     }
+    background-image: url("../img/timg.jpg");}
 
   a {
     color:#e70909;
